ensure cta contrast in schedule dark mode, update comments

--- a/source/_patterns/02-molecules/schedule/_schedule.scss
+++ b/source/_patterns/02-molecules/schedule/_schedule.scss
@@ -1,7 +1,7 @@
 /*------------------------------------------------------------------------------
 Molecule: Schedule
 --------------------------------------------------------------------------------
-1. Dark mode
+1. Default styles
 ------------------------------------------------------------------------------*/
 
 .block--schedule {
@@ -86,7 +86,7 @@ Molecule: Schedule
 }
 
 /*------------------------------------------------------------------------------
-1. Dark mode
+2. Dark mode
 ------------------------------------------------------------------------------*/
 .dark-mode {
   .block--schedule {
@@ -100,6 +100,15 @@ Molecule: Schedule
         &:hover,
         &:focus {
           color: inherit;
+        }
+      }
+
+      a.cta {
+        &:hover,
+        &:focus,
+        &:active {
+          color: var(--black);
+          outline-color: var(--black);
         }
       }
     }
